# Cryptograpy-Assignments

./: .gitignore
progass/: README.md
progass/cryptolib/: README.md  cryptolib.cabal  stack.yaml
progass/cryptolib/src/: Main.hs
progass/cryptolib/src/CryptoLib/: Primitives.hs  Test.hs
progass/elgamal/: README.md  elgamal.cabal  input.txt
progass/elgamal/src/: Main.hs
progass/fiat-shamir/: README.md  fiat-shamir.cabal  input.txt
progass/fiat-shamir/src/: Main.hs
progass/rsa/: README.md  input.txt  rsa.cabal  stack.yaml
progass/rsa/src/: Main.hs
progass/weak-cbc/: README.md  input.txt  stack.yaml  weak-cbc.cabal
progass/weak-cbc/src/: Cipher.hs  Main.hs  Utils.hs
