name:                weak-cbc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/weak-cbc#readme
license:             GPL-3.0
license-file:        LICENSE
author:              Markus Pettersson, Carl Lundgren
maintainer:          markp@student.chalmers.se, carl.lundgren@hotmail.com
copyright:           2021 Markus Pettersson & Carl Lundgren
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable weak-cbc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , bytestring
                       , hex
